--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "three": "^0.99.0",
+    "three-css3drenderer": "^1.0.1",
+    "three-orbitcontrols": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
